--- a/ReadMe
+++ b/ReadMe
@@ -8,9 +8,8 @@
 - Engineering software: Autodesk Inventor, Ansys, Creo
 
 📱 On my GitHub you'll find:
-- Mobile app prototype and Arduino-based experiment
-- SQL database about car wor
-
+- A mobile app for managing plant care and watering schedules (Java, Android Studio)
+- A relational database project for managing a car repair workshop (SQL)
 🚀 I'm currently expanding my skills in mobile development and IoT. I'm always open to new challenges and collaborative projects.
 
 📫 Contact: hubert.ciszek@interia.pl
